fix: More dark mode fixes (#5852)
* fix: Correctly indicate "auto" theme is default

* fix: .pnp.js changes were missing

* fix: Use a "-subtle" background color for the menu bar

Because those change correctly with theme changes. That the
non-"-subtle" ones may be a bs5 bug, but enough people complained
about the yellow background in dev mode in dark mode that this change
may be worth it.

* fix: Try and recolor black colors in SVGs for dark mode

* Apply suggestions from @martinthomson

--- a/ietf/static/css/document_html_txt.scss
+++ b/ietf/static/css/document_html_txt.scss
@@ -450,4 +450,19 @@ section > p, section > dl.references > dd {
    * doesn't break words at '/' like other browsers. */
   overflow-wrap: break-word;
 }
+
+/* From https://github.com/martinthomson/rfc-css/blob/main/rfc.css */
+/* SVG Trick: a prefix match works because only black and white are allowed */
+svg :is([stroke="black"], [stroke^="#000"]) {
+    stroke: var(--bs-body-color);
+}
+svg :is([stroke="white"], [stroke^="#fff"]) {
+    stroke: var(--bs-body-bg);
+}
+svg :is([fill="black"], [fill^="#000"], :not([fill])) {
+    fill: var(--bs-body-color);
+}
+svg :is([fill="white"], [fill^="#fff"]) {
+    fill: var(--bs-body-bg);
+}
 }
